<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.dynamitechetan.flowinggradient.FlowingGradient
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:transition_duration="4000" />

    <android.support.v7.widget.CardView
        android:id="@+id/sms_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/materialGray100"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/sms_separation"
                android:text="@string/phone_number_verification_title"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/verification_message_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/sms_separation"
                android:gravity="center"
                android:textColor="@android:color/black" />

            <com.chaos.view.PinView
                android:id="@+id/sms_digits_pinview"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/sms_separation"
                android:cursorVisible="true"
                android:digits="0123456789"
                android:hint="@string/_000000"
                android:inputType="number"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="2dp"
                app:itemWidth="40dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/verify_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="0dp"
                app:contentPadding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/materialGray100"
                    android:padding="10dp"
                    android:text="@string/verify"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
